[package]
name = "umay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tls = { version = "0.3.1"}
tokio-rustls = { version = "0.26.0"}
tokio-util = { version = "0.7.11" }
rustls-pemfile = "2.1.2"
rustls-webpki = "0.102.6"
tracing = "0.1"
thiserror = "1.0"
tower = "0.4"
futures = "0.3"
bytes = "1.6"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = "0.1.6"
prometheus-client = "0.22.3"
http = "1.1.0"
ipnet = "2.9.0"
socket2 = { version = "0.5", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pin-project = "1.0"
async-trait = "0.1"
hickory-resolver = "0.24.1"