[package]
name = "umay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
tokio-stream = "0.1"
tokio-tls = { version = "0.3" }
tokio-rustls = { version = "0.26" }
tokio-util = { version = "0.7" }
tokio-test = "0.4"
rustls = "0.23.12"
rustls-pemfile = "2.1"
rustls-webpki = "0.102"
webpki = "0.22.4"
rcgen = "0.13.1"
tower = "0.4"
hyper = { version = "1.4", features = ["full"] }
hyper-util = "0.1"
http = "1.1.0"
futures = "0.3"
bytes = "1.7"
prometheus-client = "0.22.3"
ipnet = "2.9.0"
socket2 = { version = "0.5", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pin-project = "1.0"
async-trait = "0.1"
hickory-resolver = "0.24"
once_cell = "1.19"
jemallocator = "0.5"
tracing = "0.1"
anyhow = "1.0.86"
thiserror = "1.0"



[[bin]]
name = "umay"
path = "src/main.rs"