[package]
name = "umay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tokio-tls = { version = "0.3" }
tokio-rustls = { version = "0.26" }
tokio-util = { version = "0.7" }
tokio-test = "0.4"
rustls = "0.23"
rustls-pemfile = "2.1"
rustls-webpki = "0.102"
webpki = "0.22.4"
rcgen = "0.13.1"
tower = { version = "0.5", features = ["full"] }
hyper = { version = "1.4", features = ["full"] }
hyper-util = "0.1"
http = "1.1.0"
futures = "0.3"
bytes = "1.7"
prometheus-client = "0.22.3"
ipnet = "2.10.0"
socket2 = { version = "0.5", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pin-project = "1.0"
async-trait = "0.1"
hickory-resolver = "0.24"
once_cell = "1.19"
jemallocator = "0.5"
tracing = "0.1"
eyre = "0.6.12"
thiserror = "1.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
arc-swap = "1.7.1"
rand = "0.8.5"
tokio-tungstenite = { version = "0.23.1", features = ["stream", "__rustls-tls"] }
config = "0.14.0"
drain = "0.1.2"
base64 = "0.22.1"
tokio-tower = "0.7.0-rc4"
chrono = "0.4.38"
tungstenite = { version = "0.24.0", features = ["__rustls-tls"] }


[lib]
name = "umay"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "umay"
path = "src/main.rs"

